# uikidcm

./: .gitignore  .lua-format  README.md  connect.sh
Lib/: CMakeLists.txt  Makefile  Makefile.inc  README.md  dl_setup.sh
Lib/Modules/: CMakeLists.txt
Lib/Modules/Comm/: CMakeLists.txt  luaComm.cc
Lib/Modules/DLDetection/: CMakeLists.txt  DarknetDetector.cc  DarknetDetector.h  Detector.h  Makefile.local  darknet.h  luaDLDetection.cc  luaDLDetection.h
Lib/Modules/DLImageProc/: CMakeLists.txt  Makefile  Makefile.local  luaDLImageProc.cc  luaDLImageProc.h  yuv2rgb.cu
Lib/Modules/ImagePreProc/: CMakeLists.txt  ImageDecode.cc  ImageDecode.h  TurboDecode.cc  TurboDecode.h  jpeg_decode.h  luaImagePreProc.cc  luaImagePreProc.h  yuv2rgb.cu  yuv2rgb.cuh
Lib/Modules/ImagePreProc/NvDecode/include/: NvV4l2ElementPlane.h  jpeglib.h  nvbuf_utils.h  v4l2_nv_extensions.h
Lib/Modules/ImagePreProc/NvDecode/src/: NvApplicationProfiler.cpp  NvUtils.cpp  NvV4l2ElementPlane.cpp  NvVideoDecoder.cpp
Lib/Modules/ImageProc/: CMakeLists.txt  ConnectRegions.cpp  Makefile  RadonTransform.cpp  RadonTransform.h  block_bitor.cpp  luaImageProc.cpp  lua_accumulate_ball.cpp  lua_accumulate_ball.h  lua_color_stats.cpp  lua_field_goals2.cpp  lua_field_lines.cpp  lua_field_occupancy.cpp  lua_field_spots.cpp  lua_goal_posts.cpp  lua_goal_posts_white.cpp
Lib/Modules/Util/: CMakeLists.txt
Lib/Modules/Util/CArray/: CMakeLists.txt  luacarray.cc  luacarray.h  test_carray.lua
Lib/Modules/Util/CUtil/: CMakeLists.txt  luacutil.cc  luacutil.h  test_cutil.lua
Lib/Modules/Util/Launcher/: CMakeLists.txt  Makefile  lualauncher.cc  lualauncher.h
Lib/Modules/Util/Python/: Makefile  libMonitor.cc  libMonitor.i  libMonitor_wrap.c  monitor_shm.py  pyshm.cpp  shm.py  test_image.py
Lib/Modules/Util/Shm/: CMakeLists.txt  Makefile.local  luashm.cc  luashm.h  test_shm.lua
Lib/Modules/Util/Unix/: CMakeLists.txt  luagetch.cc  luastty.cc  luaunix.cc  luaunix.h  test_unix.lua
Lib/Modules/Velocity/: BallModel.cpp  Gaussian2d.h  Makefile  luavelocityfilter.cpp  mexBall.cpp  test_prediction.lua  test_velocity.lua
Lib/Platform/MOS/: CMakeLists.txt  Makefile
Lib/Platform/MOS/Body/: CMakeLists.txt  HPCommManager.lua  MOSBody.lua  MOSCommManager.lua  OPBody.lua  OPCommManager_darwin.lua  check_dcm.lua  dcm.lua  dcm_darwin.lua  run_dcm.lua  run_dcm_darwin.lua  vector.lua
Lib/Platform/MOS/Body/DspCode/: CMakeLists.txt  DspCode.c  DspCode.h  DspControl.h  RobotParameter.h  ctrl_rs232.c  ctrl_rs232.h  linuxdef.h  luaDspCode.cc  luaDspCode.h  test_dsp.lua
Lib/Platform/MOS/Body/Dynamixel/: CMakeLists.txt  Dynamixel.lua  dynamixel.cc  dynamixel.h  luadynamixelpacket.cc
Lib/Platform/MOS/Camera/: CMakeLists.txt  Makefile  OPCam.cpp  ReadYuyv.cpp  camera.cc  camera.h  luaV4LCam.cc  luaV4LCam.h  test_camera.lua
Lib/Platform/MOS/GameControl/: CMakeLists.txt  GameControl.lua  luaGameControlReceiver.cc  test_GameControl.lua
Lib/Platform/MOS/Kinematics/: CMakeLists.txt  Kinematics.cc  Kinematics.h  OPKinematics.cc  OPKinematics.h  Transform.cc  Transform.h  luaKinematics.cc  luaKinematics.h  luaOPKinematics.cc  luaOPKinematics.h  test_Kinematics.lua
Lib/Platform/OP/Body/DspCode/: RobotParameter.h
Lib/Platform/OP/Camera/: CMakeLists.txt  OPCam.cpp  OPCam.h  camera.cc  camera.h  test_camera.lua  v4l2.cpp  v4l2.h
Lib/Robot/Body/DspCode/: Makefile
Lib/Robot/Body/Dynamixel/: Makefile
Lib/Robot/Camera/: Makefile  OPCam.cpp
Lib/Robot/GameControl/: Makefile
Lib/Robot/Kinematics/: Makefile
Player/: README.md  cognition.lua  dlcognition.lua  init.lua  listen_team_monitor.lua  main.lua  main_op.lua  run_cognition.lua  run_dcm.lua  run_dlcognition.lua  run_dldcm.lua  run_main.lua  run_main_op.lua  test_shm.lua  test_vision.lua  test_walk.lua  view_camera_param.lua
Player/BodyFSM/: BodyFSM.lua  BodyFSM1.lua  BodyFSM2.lua  BodyFSMDemo.lua  behavior.lua  bodyAnticipate.lua  bodyApproach.lua  bodyChase.lua  bodyDive.lua  bodyDribble.lua  bodyGotoCenter.lua  bodyIdle.lua  bodyKick.lua  bodyObstacle.lua  bodyObstacleAvoid.lua  bodyOrbit.lua  bodyPause.lua  bodyPause_getch.lua  bodyPosition.lua  bodyPositionDefendNew.lua  bodyPositionGoalie.lua  bodyPositionGoalie.lua.bak  bodyPositionPB.lua  bodyPositionTest1.lua  bodyPosition_backup.lua  bodyReady.lua  bodyReadyMove.lua  bodySearch.lua  bodyStart.lua  bodyStop.lua  bodyWalkKick.lua  position.lua
Player/Config/: Config_OP.lua  Config_Vision.lua  calibration.lua
Player/DLVision/: DLVision.lua  Detection.lua  HeadTransform.lua  Vision.lua  detectBall.lua  detectBoundary.lua  detectCircle.lua  detectFreespace.lua  detectGoal.lua  detectLandmarks.lua  detectLandmarks2.lua  detectLine.lua  detectRobot.lua  detectSpot.lua  dlvcm.lua  vcm.lua
Player/Data/: fb_yolo3_tiny_3.0.cfg  fb_yolo3_tiny_3.1.cfg  fb_yolo3_tiny_4.6.cfg  fb_yolo3_tiny_5.6.cfg  lut_zhangqiu.raw  lut_zhangxianmen.raw  yolov3.cfg
Player/Dev/: Body.lua  Camera.lua  GameControl.lua  Kinematics.lua  Team.lua  kick.lua  walk.lua
Player/GameFSM/: GameFSM.lua  gameFinished.lua  gameInitial.lua  gamePenalized.lua  gamePlaying.lua  gameReady.lua  gameSet.lua
Player/Graveyard/: KiNaomatics.lua  SimBody.lua  listener_demo.lua  main.lua  odometry.lua  print_temp.lua  run_calibration.lua  run_demo.lua  run_main.lua  run_occmap.lua  run_odometry.lua  run_setup.lua  run_test_new_walk.lua  run_tester.lua  sim_vision.lua  test_push.lua  test_role.lua  test_speed_168.lua  test_team_vision.lua  test_vision_wireless.lua  test_walk_line.lua  tester.lua  transmitter_demo.lua
Player/HeadFSM/: HeadFSM.lua  HeadFSM1.lua  HeadFSMDemo.lua  headIdle.lua  headKick.lua  headKickFollow.lua  headLog.lua  headLookGoal.lua  headLookLandmarks.lua  headObs.lua  headReady.lua  headReadyLookGoal.lua  headScan.lua  headStart.lua  headSweep.lua  headTrack.lua  headTrack.lua.bak  headTrackGoalie.lua
Player/Motion/: BasicKick.lua  Motion.lua  NewNewKick.lua  TestWalkPunch.lua  UltraSound.lua  align.lua  dive.lua  divewait.lua  falling.lua  grip.lua  keyframe.lua  kfmotion.lua  mcm.lua  nullstate.lua  relax.lua  sit.lua  sit.lua.old  (+5 more)
(+115 files in other folders)
